# py-af-colours

./: .gitignore  CONTRIBUTING.md  ISSUE_TEMPLATE.md  README.md  af_colours.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_test_publish.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  publish-to-testpypi  publish-to-testpypi.yml  unit_testing.yml
docs/: documentation.html  documentation.qmd  index.html  index.ipynb  index.qmd
docs/data/: uk_population_by_country.csv  world_population_continents.csv  world_population_in_billions.csv
py-af-colours/py_af_colours.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
py_af_colours/: __init__.py  py_af_colours.py
tests/: test_categorical_duo_output.py  test_list_length.py  test_value_errors.py  value_error_tests.py
