[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_af_colours"
license = {file = "LICENSE"}
version = "0.0.1"
authors = [
  { name="Analysis Standards and Pipelines Team", email="asap@ons.gov.uk" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Docs" = "https://best-practice-and-impact.github.io/py-af-colours/"
